fix(navbar) : update z-index

--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -101,7 +101,7 @@ mat-radio-button {
 }
 
 .sticky-top {
-	z-index: 1;
+	z-index: 2;
 }
 
 /****************** tabs ******************/
